# seam-carving

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENCE  README.txt  codemeta.json
.github/workflows/: ci.yml
images/: README.md
src/: main.cpp  seam_carving.cpp  seam_carving.h  visualise.cpp  visualise.h  visualize.cpp  visualize.h
tests/: tests.cpp
